2006-07-25  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add missing files.

2006-07-23  Arturas Sleinius  <asleinius@gmail.com>
        * lt.po: updated Lithuanian translation.
	
2006-07-16  Morten Bo Johansen  <mbj@spamcop.net>
	* da.po: Translation update.

2006-07-15  Alex Roitman  <shura@gramps-project.org>
	* check_po: Open correct file.

2006-06-22  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new file.

2006-06-15  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new file.

2006-06-11  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Remove plugin that is not shipped.
	* gramps.pot: Update.

2006-06-04  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add missing files.

2006-05-30  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Change files due to module split.

2006-05-28  Alex Roitman  <shura@gramps-project.org>
	* gramps.pot: Update.

2006-05-28  Arturas Sleinius  <asleinius@gmail.com>
        * lt.po: updated Lithuanian translation.

2006-05-25  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new files.

2006-05-23  Arturas Sleinius  <asleinius@gmail.com>
	* lt.po: updated Lithuanian translation.

2006-05-22  Alex Roitman  <shura@gramps-project.org>
	* gramps.pot: Update.

2006-05-18  Espen Berg  <espen.berg@ntnu.no>
	* nb.po, no.po: Translation update.

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new file.

2006-05-16  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new files; remove old files.

2006-05-15  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new files.

2006-05-14  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new file.
	* gramps.pot: update.

2006-05-12  Alex Roitman  <shura@gramps-project.org>
	* gramps.pot: Update.
	* POTFILES.in: Add missing files.

2006-05-10  Alex Roitman  <shura@gramps-project.org>
	* POTFILES.in: Add new file.

2006-05-07  Alex Roitman  <shura@gramps-project.org>