@@ -364,6 +364,7 @@ src/RelLib/_SourceMediaType.py
 src/RelLib/_MarkerType.py
 src/RelLib/_EventRoleType.py
 src/RelLib/_EventType.py
+src/Filters/_FamilySidebarFilter.py
 src/Filters/_FilterComboBox.py
 src/Filters/_FilterList.py
 src/Filters/_FilterMenu.py
@@ -371,12 +372,12 @@ src/Filters/_FilterParser.py
 src/Filters/_FilterStore.py
 src/Filters/_FilterWidget.py
 src/Filters/_GenericFilter.py
-src/Filters/_ParamFilter.py
 src/Filters/__init__.py
+src/Filters/_ParamFilter.py
+src/Filters/_PersonSidebarFilter.py
 src/Filters/_SearchBar.py
 src/Filters/_SearchFilter.py
 src/Filters/_SidebarFilter.py
-src/Filters/_PersonSidebarFilter.py
 src/Filters/Rules/_Everything.py
 src/Filters/Rules/_HasEventBase.py
 src/Filters/Rules/_HasGrampsId.py
