@@ -1,3 +1,6 @@
+2006-07-30  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: Add missing file.
+
 2006-07-25  Alex Roitman  <shura@gramps-project.org>
 	* POTFILES.in: Add missing files.
 
